Fix CSS conflicts to ensure mobile layout gaps and filter position are correct

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -702,22 +702,7 @@
                 }
 
                 /* Mobile Filter Bar - Full Width */
-                .mobile-filter-bar {
-                    position: sticky !important;
-                    top: 138px !important;
-                    z-index: 990 !important;
-                    background-color: #f5f5f7 !important;
-                    width: 100% !important;
-                    margin: 0 !important;
-                    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-                    padding: 8px 12px !important;
-                    /* Internal Padding */
-                    display: flex !important;
-                    gap: 8px !important;
-                    overflow-x: auto !important;
-                    box-sizing: border-box;
-                    left: 0;
-                }
+                /* Duplicate .mobile-filter-bar removed */
 
                 /* Mobile Card - Full Width (Edge-to-Edge) */
                 .mobile-card {
@@ -801,21 +786,7 @@
             }
 
             /* [New] Mobile Filter Bar Wrapper (Sticky) */
-            .mobile-filter-bar {
-                position: sticky !important;
-                top: 138px !important;
-                /* 54px (Black) + 84px (Blue) */
-                z-index: 990 !important;
-                background-color: #f5f5f7 !important;
-                padding: 8px 12px !important;
-                display: flex !important;
-                gap: 8px !important;
-                overflow-x: auto !important;
-                border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-                margin: 0 -10px 12px -10px !important;
-                /* Negative margin to span full width if inside padded container */
-                width: calc(100% + 20px) !important;
-            }
+            /* Duplicate .mobile-filter-bar removed */
 
             .mobile-filter-chip {
                 padding: 6px 14px;
@@ -1041,19 +1012,7 @@
                 display: inline-block;
             }
 
-            .mobile-filter-bar {
-                display: flex;
-                overflow-x: auto;
-                gap: 8px;
-                padding: 12px 16px;
-                background: #f5f5f7;
-                position: sticky;
-                top: calc(54px + env(safe-area-inset-top));
-                /* Header height adjusted */
-                z-index: 900;
-                margin: 0 -16px 12px -16px;
-                border-bottom: 1px solid #e5e5ea;
-            }
+            /* Duplicate .mobile-filter-bar removed */
 
             .mobile-filter-chip {
                 padding: 6px 14px;
