--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>디자인지그 통합 관리 시스템</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/svg+xml" href="icon.svg">
-    <link rel="apple-touch-icon" href="icon.svg">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" type="image/png" href="dj_icon_v4.png">
+    <link rel="apple-touch-icon" href="dj_icon_v4.png">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
-    <!-- Cache Version: dz-admin-v13 (2026-01-21) -->
+    <!-- Cache Version: dz-admin-v14 (2026-01-22) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script src="https://upload-widget.cloudinary.com/6.8.1/global/all.js" type="text/javascript"></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript" onerror="console.warn('Cloudinary widget failed to load')"></script>
     <!-- 환경 설정 파일 로드 (비밀번호 등) -->
     <script src="admin_config.js?v=20260121_1653"></script>
 
