🔍 동기화 디버그 로그 추가 (운영비 실패 원인 추적)
adminwonpro.html:
✅ syncExpensesFromCloud 함수 디버깅 강화
   - API 응답 전체 로그 출력
   - API URL 로그 출력
   - 오류 메시지 개선

목적:
- 운영비 동기화 실패 원인 파악
- Google Apps Script API 응답 확인
- 실제 에러 내용 콘솔에 표시

다음 단계:
- 콘솔에서 API 응답 확인
- Google Sheets 데이터 검증
- 필요 시 Apps Script 코드 수정

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -15002,6 +15002,8 @@
                 const response = await fetch(`${CUSTOMER_SYNC_URL}?sheet=expenses`);
                 const result = await response.json();
 
+                console.log('[운영비 불러오기] API 응답:', result);
+
                 if (result.result === 'success') {
                     let loadedCount = 0;
 
@@ -15050,7 +15052,8 @@
                 }
             } catch (err) {
                 console.error('운영비 불러오기 오류:', err);
-                showToast('불러오기 실패: ' + err.message, 'error');
+                console.error('API URL:', `${CUSTOMER_SYNC_URL}?sheet=expenses`);
+                showToast('운영비 불러오기 실패: ' + err.message, 'error');
                 return false;
             } finally {
                 if (btn) {
