📱 모바일 기본 필터 '공사중'으로 설정
adminwonpro_mobile.html:
✅ 모바일 화면에서 기본 상태 필터 = 공사중
✅ PC 웹은 기존대로 '전체' 유지

변경사항:
- DOMContentLoaded 시 모바일 체크
- window.innerWidth <= 768이면 currentStatusFilter = 'contracted'
- 메인 화면에서 공사중 고객만 표시

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -8142,6 +8142,12 @@
             createEstimateCategories();
             createCoverTable();
             initYearFilter();
+
+            // 모바일에서는 기본 필터를 "공사중"으로 설정
+            if (window.innerWidth <= 768) {
+                currentStatusFilter = 'contracted';
+            }
+
             updateCustomerList();
 
             const statusEl = document.getElementById('initialSyncStatus');
