🔧 모바일 기본 필터 수정: 계약완료 → 공사중
adminwonpro_mobile.html:
✅ 기본 상태 필터 수정
   - 이전: contracted (계약완료)
   - 수정: in_progress (공사중)

모바일 메인 화면:
- 공사중 고객만 표시

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -8145,7 +8145,7 @@
 
             // 모바일에서는 기본 필터를 "공사중"으로 설정
             if (window.innerWidth <= 768) {
-                currentStatusFilter = 'contracted';
+                currentStatusFilter = 'in_progress';
             }
 
             updateCustomerList();
