--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -621,15 +621,13 @@
                    Also removing any potential content gap. */
                 .mobile-filter-bar {
                     position: sticky !important;
-                    top: 60px !important;
-                    /* Aggressively reduced from 105px to sit higher */
+                    top: 135px !important;
+                    /* 54px(Black) + 81px(Blue) = 135px */
                     z-index: 990 !important;
                     background-color: #f5f5f7 !important;
                     width: 100% !important;
-                    margin-top: -20px !important;
-                    /* Pull up to remove gap */
                     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-                    padding: 8px 12px !important;
+                    padding: 6px 16px !important;
                     display: flex !important;
                     gap: 8px !important;
                     overflow-x: auto !important;
@@ -730,8 +728,8 @@
 
                 /* Content Padding Adjustments */
                 #panel-checklist .doc-content {
-                    padding-top: 140px !important;
-                    /* Header offset */
+                    padding-top: 115px !important;
+                    /* 54 + 약 61px(헤더) = 115px */
                     padding-bottom: 100px !important;
                     padding-left: 0 !important;
                     padding-right: 0 !important;
