--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -557,11 +557,15 @@
             width: 300px;
             background: #fff;
             border-right: 1px solid #e8e8ed;
-            display: flex;
+            display: flex !important;
             flex-direction: column;
             position: sticky;
             top: 56px;
-            height: calc(100vh - 56px);
+            height: auto !important;
+            min-height: calc(100vh - 56px - env(safe-area-inset-top));
+            border-right: none;
+            z-index: 10;
+            overflow: visible !important;
         }
 
         .sidebar-header {
