모바일 헤더 텍스트 수정 - 공사기간, 현장주소, 성명, 연락처 라벨 추가 - 빈 값일 때 기본 텍스트 표시

--- a/adminwonpro_mobile.html
+++ b/adminwonpro_mobile.html
@@ -17228,13 +17228,13 @@
                             <div style="width: 100%; display: flex; flex-direction: column; gap: 3px; color: #fff;">
                                 <div style="font-size: 11px; font-weight: 700; line-height: 1.2; margin-bottom: 2px;">공정별 체크리스트</div>
                                 <div style="font-size:11px; line-height:1.5; white-space: normal; word-wrap: break-word;">
-                                    ${customer.projectName || '현장명 없음'} | ${period}
+                                    ${customer.projectName || '현장명 없음'} | 공사기간 ${period}
                                 </div>
                                 <div style="font-size:11px; line-height:1.5; white-space: normal; word-wrap: break-word;">
-                                    ${customer.siteAddress || ''}
+                                    ${customer.siteAddress || '현장주소 없음'}
                                 </div>
                                 <div style="font-size:11px; line-height:1.5; white-space: normal; word-wrap: break-word;">
-                                    ${customer.clientName || '이름 없음'} | ${phoneLink}${customer.spouseInfo || ''}
+                                    ${customer.clientName || '성명 없음'} | ${phoneLink || '연락처 없음'}
                                 </div>
                             </div>
                         `;
