메인 화면 고객 목록 박스 스타일 복원 - 카드형 레이아웃 적용 (margin, border-radius, border) - hover 효과 추가 (배경색 변경) - active 상태 강조 (파란색 테두리)

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -659,13 +659,22 @@
 
         .customer-item {
             padding: 12px 14px;
+            margin: 8px;
+            border-radius: 8px;
+            background: #fff;
+            border: 1px solid #e8e8ed;
             cursor: pointer;
+            transition: all 0.2s ease;
         }
 
         .customer-item:hover {
+            background: #f9f9fb;
+            border-color: #d2d2d7;
         }
 
         .customer-item.active {
+            background: #e8f4fd;
+            border: 2px solid #0071e3;
         }
 
         .customer-item-header {
