사이드바 내부 스크롤 완전 제거 - main-layout min-height 제거 - sidebar display: block으로 변경 (flex 제거) - 고객 목록이 페이지 전체에서 자연스럽게 스크롤

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -549,7 +549,6 @@
         /* 메인 레이아웃 */
         .main-layout {
             display: flex;
-            min-height: calc(100vh - 56px);
         }
 
         /* 사이드바 */
@@ -557,8 +556,7 @@
             width: 300px;
             background: #fff;
             border-right: 1px solid #e8e8ed;
-            display: flex !important;
-            flex-direction: column;
+            display: block;
         }
 
         .sidebar-header {
