사이드바 display 속성 완전 제거 - flex-shrink: 0만 유지

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -556,7 +556,7 @@
             width: 300px;
             background: #fff;
             border-right: 1px solid #e8e8ed;
-            display: block;
+            flex-shrink: 0;
         }
 
         .sidebar-header {
