--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -549,6 +549,7 @@
         /* 메인 레이아웃 */
         .main-layout {
             display: flex;
+            align-items: flex-start;
         }
 
         /* 사이드바 */
@@ -557,6 +558,7 @@
             background: #fff;
             border-right: 1px solid #e8e8ed;
             flex-shrink: 0;
+            overflow: visible;
         }
 
         .sidebar-header {
