아이폰 최적화 아이콘 적용 (검정 배경, 정사각형 DJ) 및 파비콘 추가

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>디자인지그 통합 관리 시스템</title>
-    <link rel="icon" type="image/png" href="dj_icon_v4.png">
-    <link rel="apple-touch-icon" href="dj_icon_v4.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#1d1d1f">
     <!-- Cache Version: dz-admin-v15 (2026-01-22) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
-    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript" onerror="console.warn('Cloudinary widget failed to load')"></script>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"
+        onerror="console.warn('Cloudinary widget failed to load')"></script>
     <!-- 환경 설정 파일 로드 (비밀번호 등) -->
     <script src="admin_config.js?v=20260122_1830"></script>
 
@@ -641,8 +644,7 @@
             border-color: #0071e3;
         }
 
-        .customer-list {
-        }
+        .customer-list {}
 
         .customer-item {
             padding: 12px 14px;
